fix: scrollbar style

--- a/apps/website/src/style/element/scrollbar.scss
+++ b/apps/website/src/style/element/scrollbar.scss
@@ -1,17 +1,19 @@
+@use '@/style/tool/function' as *;
+
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--s-color-bg-dark-1);
+  background-color: get-css-var(scrollbar, track-bg-color);
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  background-color: var(--s-color-text-light-2);
+  background-color: get-css-var(scrollbar, thumb-bg-color);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--s-color-bg-dark-5);
+  background-color: get-css-var(scrollbar, thumb-bg-color-hover);
 }
